# TIMP_rubej_control_second

./: .CMakeLists.txt.swp  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: action.yml
GoF-Design-Patterns_Behavioral_TemplateMethod/: pizza_store_crtp.cpp  pizza_store_nvi.cpp
testing/: main_t.cpp
tests/: test1.cpp
