cmake_minimum_required(VERSION 3.2)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(behaviour_templates)
option(BUILD_TEST "Build test" OFF)
add_executable(crtp ${CMAKE_CURRENT_SOURCE_DIR}/GoF-Design-Patterns_Behavioral_TemplateMethod/pizza_store_crtp.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/GoF-Design-Patterns_Behavioral_TemplateMethod)
install(TARGETS crtp RUNTIME DESTINATION bin)

if (BUILD_TEST)
  add_subdirectory(submdls/gtest)
  enable_testing()
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
  include_directories(${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})
  file(GLOB TEST_SOURCES tests/*.cpp)
  add_executable(test1 ${TEST_SOURCES})
  target_link_libraries(test1 gtest gtest_main gmock)
  add_test(NAME test1 COMMAND test1)
endif()
